# sensgreen-connector

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  idf_component.yml  wokwi.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  upload_component.yml
.wokwi/: diagram-esp32.json  diagram-esp32c3.json  diagram-esp32s3.json
docs/: mqtt-integration-helper.md
examples/esp32_ex/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp32_ex/main/: CMakeLists.txt  esp32_ex.cpp  mqtt_connector.hpp  temperature_device.hpp
examples/multisensor_ex/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/multisensor_ex/main/: CMakeLists.txt  Kconfig.projbuild  app_utils.hpp  idf_component.yml  mqtt_connector.hpp  multisensor_device.hpp  multisensor_ex.cpp
examples/multisensor_ex/main/certs/: localhost.crt
include/: sensgreen.hpp
include/port/esp32/: component_utils.hpp  esp32_device.hpp  esp32_mqtt_connector.hpp
include/sensgreen/: device.hpp  metric_base.hpp  metric_types.hpp  mqtt_connector.hpp  mqtt_topic_buffer.hpp  mqtt_topic_handler.hpp  sensor_base.hpp
src/: device.cpp  esp32_mqtt_connector.cpp
src/esp32/: esp32_mqtt_connector.cpp
